# kicad_halftone

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/gui/: mod.rs
src/kicad_mod/: mod.rs
